--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.parse.bolts:bolts-android:1.+'
-    compile fileTree('src/main/libs')
+    compile files('libs/Parse-1.8.2.jar')
+    compile files('libs/picasso-2.5.0.jar')
 }
